--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 html{
     background-color: black;
-    color: white;
     display: flex;
     justify-content: center;
 }
@@ -50,9 +49,11 @@ table>tbody>tr>td>button{
 }
 /* Highlighted cells */
 table>tbody>tr>th{
-    background-color: indigo;
+    background-color: red;
+    color: white;
 }
 table>tbody>tr:not(:first-child, :last-child)>td:first-child{
-    background-color: blue;
-    font-weight: bold;
+    background-color: orangered;
+    color: white;
+    font-weight:  bold;
 }
